I just discovered that the vlc.net (poll etc) are now available for lua interface only. I can't really see the reason and I'm surprised you didn't deprecated it before.
Anyway the result is that the extension vlsub doesn't work on vlc 2.1.0. This functionality is key for this extension because I need to send custom header in http request and I can't do that with vlc.stream.
Could you please consider reactivate vlc.net function for lua extensions in 2.1.1 release?
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Child items
0
No child items are currently assigned. Use child items to break down this issue into smaller parts.
Linked items
0
Link issues together to show that they're related.
Learn more.
From the error an user give me and the doc, I think the whole "net" name space isn't available any more:
lua warning: Error while running script /usr/lib/vlc/lua/extensions/VLSub.luac, function activate(): lua/extensions/VLSub.lua:1184: attempt to index field 'net' (a nil value)
The commit lua: separate generic and interface-specific net functions let the "net" namespace available for extensions but empty it from all his functions except those that "doesn't belong in this name space".
I can't see why this functions should be interface specific, I think a lot of extensions could need them, to make A http post for example.
So could you please make the functions of the net module available for extension again?
Cannot just revert changes to bring the old net module back to extensions including vlc.net.opendir(path) already used by Add Similar Files From Folder extension? I would like to use this function in my next extension, Subtitle editor.
lua.net.poll is still unavailable on Windows (deb38e43ecf62699d62e2dc80fd4c4aea4ac0d32). How do you use lua.net.connect_tcp without it? An example/documentation update would be nice.
lua.net.poll is still unavailable on Windows (deb38e43ecf62699d62e2dc80fd4c4aea4ac0d32). How do you use lua.net.connect_tcp without it? An example/documentation update would be nice.