Lua: add sockets to extensions (fixes #9495)